[gd_scene load_steps=2 format=3 uid="uid://b5lmqbt18cayx"]

[ext_resource type="Script" path="res://gui/resource_ui.gd" id="1_nwof0"]

[node name="ResourceUI" type="Control"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 3
anchors_preset = 0
offset_right = 25.0
offset_bottom = 25.0
script = ExtResource("1_nwof0")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(25, 25)
layout_mode = 1
offset_right = 25.0
offset_bottom = 25.0
color = Color(0.184314, 0.184314, 0.184314, 0.454902)

[node name="ResourceCount" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="BtnLayer" type="CanvasLayer" parent="."]
visible = false
follow_viewport_enabled = true

[node name="NameBtn" type="Button" parent="BtnLayer"]
offset_right = 8.0
offset_bottom = 31.0
focus_mode = 0
mouse_default_cursor_shape = 2

[connection signal="button_down" from="BtnLayer/NameBtn" to="." method="_on_name_btn_button_down"]
